--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,12 +5,17 @@
         = current_user.name
     .option
       .option__edit
-        = icon('far', 'edit')
+        = = link_to new_group_path do
+          = icon('far', 'edit')
       .option__cog
         = link_to edit_user_path(current_user) do
           = icon('fas', 'cog')
 
   .group
-    .group__list
-      .groupname techcamp
-      .coment まだメッセージがありません
+    - current_user.groups.each do |group|
+      .Group
+        = link_to '#' do
+          .Group__name
+            = group.name
+          .Group__message
+            メッセージはまだありません
