--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,33 +1,30 @@
 .mainchat
-  .mainchat__name 
-    .mainchatgroup 
-      test
-      .mainchatmember 
-        member : masa
+  .mainchat__name
+    .groupname
+      = @group.name
+      .groupuser
+        Member:
+        - @group.users.each do |user|
+          = user.name
+
     .editbottan
-      = link_to "#" do
+      = link_to edit_group_path(@group) do
         = "Edit"
   .mainchat__chat
-    .chat1
-      .chatname1
-        masa
-      .date1
-        2019/8/15(wed) 12:59:59
-    .chatmessege1
-      おはよう
+    = render @messages
 
-    .chat2
-      .chatname2
-        masa
-      .date2
-        2019/8/15(wed) 12:59:59
-    .chatmessege2
-      今日は雨から夜
   .mainchat__text
-    %form.new-messege
-      .input-box
-        %input{type: "text", class: "input-box__text", placeholder: "type a messege"}
-        %label{class: "input-box__image"}
-          =icon('fas', 'image')
-          %input{type: "file", class: "input-box__image__file"}
-      %input{type: "submit", value: "send", class: "submit-btn"}
+    = form_with model: [@group, @message], html: {class: "Form"}, local: true do |f|
+      .Form__contents
+        = f.text_field :content, class: 'Form__inputContent', placeholder: 'type a message'
+        = f.label :image, class: 'Form__inputImage' do
+          = icon('far', 'image', class: 'Form__icon')
+          = f.file_field :image, class: 'Hidden'
+      = f.submit 'Send', class: 'Form__submit'
+    -# %form.new-messege
+    -#   .input-box
+    -#     %input{type: "text", class: "input-box__text", placeholder: "type a messege"}
+    -#     %label{class: "input-box__image"}
+    -#       =icon('fas', 'image')
+    -#       %input{type: "file", class: "input-box__image__file"}
+    -#   %input{type: "submit", value: "send", class: "submit-btn"}
