--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,7 +5,7 @@
         = current_user.name
     .option
       .option__edit
-        = = link_to new_group_path do
+        = link_to new_group_path do
           = icon('far', 'edit')
       .option__cog
         = link_to edit_user_path(current_user) do
@@ -14,8 +14,8 @@
   .group
     - current_user.groups.each do |group|
       .Group
-        = link_to '#' do
+        = link_to group_messages_path(group) do
           .Group__name
             = group.name
           .Group__message
-            メッセージはまだありません
+            = group.show_last_message
