--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 .wrapper{
@@ -7,54 +8,53 @@
 }
 
 .user{
-      height: 20px;
-      width: 260px;
-       &__name{
-         color: #ffffff;
-         font-size: 16px;
-       }
-      }
-.option{
-      height: 20px;
-      width: 60px;
-      display: flex;
-      justify-content: flex-end;
-       &__edit{
-         color: #ffffff;
-       }
-       &__cog{
-         color: #ffffff;
-         margin: 0 0 0 5px;
-       }
+  height: 20px;
+  width: 260px;
+    &__name{
+      color: #ffffff;
+      font-size: 16px;
     }
+  }
+.option{
+  height: 20px;
+  width: 60px;
+  display: flex;
+  justify-content: flex-end;
+    .cog{
+      color: #fafafa;
+      margin-left: 5px;
+    }
+}
 
 .sidebar{
   background-color: #253141;
-    &__name{
-      padding: 0px 20px;
-      height: 100px;
-      width: 300px;
-      display: flex;
-      align-items: center;
-    }
-    .group{
-      background-color: #2f3e51;
-      height: calc(100vh - 100px);
-      padding: 0 20px;
-      .Group{
-        box-sizing: border-box;
-        padding: 20px 0 40px 0;
-        &__name{
-          font-size: 15px;
-          margin: 0 0 5px 0;
-          color: #fafafa;
-        }
-        &__messege{
-          font-size: 11px;
-          color: #fafafa;
-        }
+  &__name{
+    padding: 0px 20px;
+    height: 100px;
+    width: 300px;
+    display: flex;
+    align-items: center;
+  }
+  .group{
+    background-color: #2f3e51;
+    height: calc(100vh - 100px);
+    padding: 0 20px;
+    .Group{
+      box-sizing: border-box;
+      padding: 20px 0 40px 0;
+      // text-decoration: none;
+      &__name{
+        font-size: 15px;
+        margin: 0 0 5px 0;
+        color: #fafafa;
+        // text-decoration: none;
+      }
+      &__message{
+        font-size: 11px;
+        color: #fafafa;
       }
     }
+  }
 }
 
 .mainchat{
