--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -6,10 +6,10 @@
     .option
       .option__edit
         = link_to new_group_path do
-          = icon('far', 'edit')
+          = icon('far', 'edit', class: 'cog')
       .option__cog
         = link_to edit_user_path(current_user) do
-          = icon('fas', 'cog')
+          = icon('fas', 'cog', class: 'cog')
 
   .group
     - current_user.groups.each do |group|
