--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -33,7 +33,7 @@
               .ChatMember__remove.ChatMember__button{"data-user-id": user.id, "data-user-name": user.name} 削除
               %input{name: "group[user_ids][]", type:"hidden", value: user.id}
       / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
-      = f.collection_check_boxes :user_ids, User.all, :id, :name
+      -# = f.collection_check_boxes :user_ids, User.all, :id, :name
       / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
   .SettingGroupForm__field
     .SettingGroupForm__leftField
